<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusedByDefault="false"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:background="@drawable/sunny">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_emptystate"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_empty_state"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/empty_list"
                        app:layout_constraintBottom_toTopOf="@+id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/guideline1"
                        app:layout_constraintVertical_bias="0.0" />
                    <TextView
                        android:id="@+id/tvempty_state"
                        android:text="@string/nodata"
                        android:textSize="15dp"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/guideline"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintGuide_percent=".7"
                        android:orientation="horizontal"/>
                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintGuide_percent=".1"
                        android:orientation="horizontal"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/et_search"
                    android:focusedByDefault="false"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:focusableInTouchMode="true"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_bg"
                    android:drawableTint="@android:color/white"
                    android:drawableLeft="@drawable/ic_location_on"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:padding="@dimen/dimen_12dp"
                    android:textSize="@dimen/dimen_12dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_search_loc"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/enter_location"/>

                <ImageView
                    android:id="@+id/iv_search_loc"
                    android:layout_marginEnd="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_12dp"
                    android:src="@drawable/ic_search"
                    android:background="@drawable/rounded_corner_bg"
                    android:tint="@android:color/white"
                    android:padding="@dimen/dimen_15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/et_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_search"
                    app:layout_constraintBottom_toBottomOf="@id/et_search"/>

                <TextView
                    android:id="@+id/tv_todaysWeather"
                    tools:text="Weather for London, UK"
                    android:textStyle="italic"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_search"
                    android:layout_margin="22dp"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/iv_weatherIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/weather"
                    android:layout_marginEnd="@dimen/dimen_12dp"
                    android:layout_marginRight="@dimen/dimen_12dp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_weatherType"
                    app:layout_constraintEnd_toStartOf="@+id/tv_weatherType"
                    app:layout_constraintTop_toBottomOf="@+id/tv_todaysWeather"
                    app:layout_constraintTop_toTopOf="@+id/tv_weatherType" />

                <TextView
                    android:id="@+id/tv_weatherType"
                    app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Haze"
                    android:fontFamily="casual"
                    app:layout_constraintBottom_toTopOf="@+id/tv_temp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:layout_margin="@dimen/dimen_12dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_todaysWeather"
                    app:layout_constraintStart_toEndOf="@+id/iv_weatherIcon"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.65" />

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="0dp"
                    android:layout_height="320dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_weatherType"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-thin"
                    tools:text="50"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="140dp"
                    />

                <TextView
                    android:id="@+id/tv_max"
                    app:layout_constraintStart_toEndOf="@+id/tv_temp"
                    app:layout_constraintTop_toTopOf="@+id/tv_temp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    tools:text="50&#xb0;C"
                    android:textColor="@android:color/white"
                    />
                <ImageView
                    android:id="@+id/iv_tempMax"
                    android:src="@android:drawable/arrow_up_float"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/tv_max"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_max"
                    app:layout_constraintBottom_toBottomOf="@id/tv_max"/>
                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    app:layout_constraintStart_toStartOf="@id/tv_max"
                    app:layout_constraintEnd_toEndOf="@id/tv_min"
                    app:layout_constraintTop_toBottomOf="@id/tv_max"
                    app:layout_constraintBottom_toTopOf="@id/tv_min"/>
                <TextView
                    android:id="@+id/tv_min"
                    app:layout_constraintStart_toEndOf="@+id/tv_temp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_max"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="50&#xb0;C"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"
                    />
                <ImageView
                    android:id="@+id/iv_tempMin"
                    android:src="@android:drawable/arrow_down_float"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/tv_min"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_min"
                    app:layout_constraintBottom_toBottomOf="@id/tv_min"/>

                <TextView
                    android:id="@+id/tv_wind"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    tools:text="@string/text_wind"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                    app:layout_constraintTop_toBottomOf="@+id/tv_temp"
                    android:layout_margin="12dp"
                    android:fontFamily="casual"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_feels_like"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    tools:text="@string/text_feels_like"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                    app:layout_constraintTop_toBottomOf="@+id/tv_wind"
                    android:layout_margin="@dimen/dimen_12dp"
                    android:fontFamily="casual"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_thoughts"
                    android:background="@drawable/rounded_corner_bg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:fontFamily="sans-serif-thin"
                    android:textStyle="bold|italic"
                    tools:text="...nknkknk"
                    android:textSize="14dp"
                    android:padding="@dimen/dimen_15dp"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@id/fab"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                    app:layout_constraintTop_toBottomOf="@+id/tv_feels_like"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    app:srcCompat="@drawable/ic_location_on"
                    android:backgroundTint="@android:color/white"
                    tools:ignore="VectorDrawableCompat" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <ProgressBar
                android:id="@+id/pb_progress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminateTint="@android:color/white"/>
            <TextView
                android:id="@+id/tv_loading_msg"
                tools:text="@string/loading_msg"
                android:visibility="gone"
                android:textColor="@android:color/white"
                android:fontFamily="casual"
                android:textSize="@dimen/dimen_12dp"
                android:textStyle="italic"
                android:padding="@dimen/dimen_10dp"
                android:gravity="center"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pb_progress"
                android:layout_marginTop="@dimen/dimen_10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
